update sns link

--- a/about.html
+++ b/about.html
@@ -164,9 +164,9 @@
          <!-- Start footer -->
          <div class="footer col-md-6 col-xs-offset-3">
               <h5>Copyright 2016
-              <a href="www.facebook.com" ><i class="fa fa-facebook fa-1x icon1"></i></a>
-              <a href="#"><i class="fa fa-twitter fa-1x icon1"></i></a>
-              <a href="#"><i class="fa fa-instagram fa-1x icon1"></i></a>
+              <a href = "https://twitter.com/Official_LVLZ"><i class="fa fa-twitter"></a></i>
+                <a href="https://www.facebook.com/lvlz8/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.instagram.com/babysoullvlz/"><i class="fa fa-linkedin"></i></a>
               </h5>
          </div>
          <!-- End footer -->
