--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                <h3 class="heading-inner">About</h3>
                   <div class="hr"></div>
                     <h4>
-                    <span class="text-about">본명</span> 이수정 (Lee Su Jeong)                  | <span class="text-about">출생</span> 1992년 7월 6일(28세) 광주직할시 서구 서동
+                    <span class="text-about">본명</span> 이수정 (Lee Su Jeong) <br><span class="text-about">출생</span> 1992년 7월 6일(28세) 광주직할시 서구 서동
                     </h4>
                     
                     <h4>
