--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                     </h4>
                     
                     <h4>
-                    <span class="text-about"> 신체</span> 키 155.5cm, 혈액형 O형, 신발 사이즈 215mm
+                    <span class="text-about"> 신체</span> 키 155.5cm, 혈액형 O형, 신발 215mm
                     </h4>
                     
                     <h4>
